# qa-features

./: pyproject.toml
features/: checkout.feature  online_shopping.feature  validation_registration.feature
steps/: user_registration.py
